--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "tiptap": "^1.27.1",
+    "tiptap-extensions": "^1.29.1",
+    "tiptap-vuetify": "^2.20.0",
     "vue": "^2.6.11",
+    "vue-draggable-resizable": "^2.2.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.29"
   },
@@ -20,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "material-design-icons-iconfont": "^5.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
