--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "interactjs": "^1.9.18",
     "lodash": "^4.17.15",
+    "panzoom": "^9.2.4",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "subjx": "^0.2.7",
     "tiptap": "^1.27.1",
     "tiptap-extensions": "^1.29.1",
     "tiptap-vuetify": "^2.20.0",
     "vue": "^2.6.11",
+    "vue-drag-resize": "^1.3.2",
     "vue-draggable-resizable": "^2.2.0",
     "vue-panzoom": "^1.1.1",
+    "vue-resizable": "^1.2.0",
     "vue-resize-directive": "^1.2.0",
     "vue-router": "^3.2.0",
     "vue-zoomer": "^0.3.6",
