--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-drag-resize": "^1.3.2",
     "vue-draggable-resizable": "^2.2.0",
     "vue-panzoom": "^1.1.1",
+    "vue-radial-menu": "^1.1.1",
     "vue-resizable": "^1.2.0",
     "vue-resize-directive": "^1.2.0",
     "vue-router": "^3.2.0",
