--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-simple-context-menu": "^3.1.10",
     "vue-zoomer": "^0.3.6",
     "vue2-dropzone": "^3.6.0",
+    "vue2-touch-events": "^2.2.1",
     "vuetify": "^2.2.29"
   },
   "devDependencies": {
