--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "interactjs": "^1.9.18",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.2.2",
     "lodash": "^4.17.15",
     "panzoom": "^9.2.4",
     "sass": "^1.26.5",
@@ -25,6 +27,7 @@
     "vue-radial-menu": "^1.1.1",
     "vue-resizable": "^1.2.0",
     "vue-resize-directive": "^1.2.0",
+    "vue-responsive-dash": "^0.4.2",
     "vue-router": "^3.2.0",
     "vue-simple-context-menu": "^3.1.10",
     "vue-zoomer": "^0.3.6",
